--- a/webapp/qna/show.html
+++ b/webapp/qna/show.html
@@ -53,13 +53,6 @@
                 <li class="nav-divider"></li>
                 <li><a href="#"><i class="glyphicon glyphicon-cog" style="color:#dd1111;"></i> Settings</a></li>
             </ul>
-            
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse2">
-            	<span class="sr-only">Toggle navigation</span>
-            	<span class="icon-bar"></span>
-            	<span class="icon-bar"></span>
-            	<span class="icon-bar"></span>
-            </button>            
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
@@ -97,8 +90,8 @@
                       <p>A 에 의존성을 가지는 B라는 클래스가 있습니다.</p><p>B라는 클래스는 InitializingBean 을 상속하고 afterPropertiesSet을 구현하고 있습니다.
                       서버가 가동되면서 bean들이 초기화되는 시점에 B라는 클래스의 afterPropertiesSet 메소드는</p><p>A라는 클래스의 특정 메소드인 afunc()를 호출하고 있습니다.</p>
                   </div>
-                  <div class="article-webserver.util">
-                      <ul class="article-webserver.util-list">
+                  <div class="article-util">
+                      <ul class="article-util-list">
                           <li>
                               <a class="link-modify-article" href="/questions/423/form">수정</a>
                           </li>
@@ -135,15 +128,15 @@
                               <div class="article-doc comment-doc">
                                   <p>이 글만으로는 원인 파악하기 힘들겠다. 소스 코드와 설정을 단순화해서 공유해 주면 같이 디버깅해줄 수도 있겠다.</p>
                               </div>
-                              <div class="article-webserver.util">
-                                  <ul class="article-webserver.util-list">
+                              <div class="article-util">
+                                  <ul class="article-util-list">
                                       <li>
                                           <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
                                       </li>
                                       <li>
-                                          <form class="delete-answer-form" action="/questions/413/answers/1405" method="POST">
+                                          <form class="form-delete" action="/questions/413/answers/1405" method="POST">
                                               <input type="hidden" name="_method" value="DELETE">
-                                              <button type="submit" class="delete-answer-button">삭제</button>
+                                              <button type="submit" class="link-delete-article">삭제</button>
                                           </form>
                                       </li>
                                   </ul>
@@ -164,15 +157,15 @@
                               <div class="article-doc comment-doc">
                                   <p>이 글만으로는 원인 파악하기 힘들겠다. 소스 코드와 설정을 단순화해서 공유해 주면 같이 디버깅해줄 수도 있겠다.</p>
                               </div>
-                              <div class="article-webserver.util">
-                                  <ul class="article-webserver.util-list">
+                              <div class="article-util">
+                                  <ul class="article-util-list">
                                       <li>
                                           <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
                                       </li>
                                       <li>
                                           <form class="form-delete" action="/questions/413/answers/1405" method="POST">
                                               <input type="hidden" name="_method" value="DELETE">
-                                              <button type="submit" class="delete-answer-button">삭제</button>
+                                              <button type="submit" class="link-delete-article">삭제</button>
                                           </form>
                                       </li>
                                   </ul>
@@ -182,7 +175,7 @@
                               <div class="form-group" style="padding:14px;">
                                   <textarea class="form-control" placeholder="Update your status"></textarea>
                               </div>
-                              <button class="btn btn-success pull-right" type="button">답변하기</button>
+                              <button class="btn btn-success pull-right" type="button">Post</button>
                               <div class="clearfix" />
                           </form>
                       </div>
@@ -192,36 +185,6 @@
         </div>
     </div>
 </div>
-
-<script type="text/template" id="answerTemplate">
-	<article class="article">
-		<div class="article-header">
-			<div class="article-header-thumb">
-				<img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
-			</div>
-			<div class="article-header-text">
-				<a href="#" class="article-author-name">{0}</a>
-				<div class="article-header-time">{1}</div>
-			</div>
-		</div>
-		<div class="article-doc comment-doc">
-			{2}
-		</div>
-		<div class="article-webserver.util">
-		<ul class="article-webserver.util-list">
-			<li>
-				<a class="link-modify-article" href="/api/qna/updateAnswer/{3}">수정</a>
-			</li>
-			<li>
-				<form class="delete-answer-form" action="/api/questions/{3}/answers/{4}" method="POST">
-					<input type="hidden" name="_method" value="DELETE">
-                     <button type="submit" class="delete-answer-button">삭제</button>
-				</form>
-			</li>
-		</ul>
-		</div>
-	</article>
-</script>
 
 <!-- script references -->
 <script src="../js/jquery-2.2.0.min.js"></script>
